[package]
name = "linfa-stack-overflow-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
serde = "1.0.197"
serde_json = "1.0.114"
